--- a/portal-consulting/src/mapa-del-sitio/inicio.html
+++ b/portal-consulting/src/mapa-del-sitio/inicio.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header-inner container" role="banner">
             <a class="logo" href="inicio.html">
-                <img src="portal logo.jpg" alt="Portal logo">
+                <img src="logo_106x81.png" alt="Portal logo">
                 <span>Portal</span>
             </a>
 
