--- a/portal-consulting/src/mapa-del-sitio/preguntas-frecuentes.html
+++ b/portal-consulting/src/mapa-del-sitio/preguntas-frecuentes.html
@@ -8,30 +8,119 @@
 </head>
 <body>
     <header>
-        <h1>Preguntas Frecuentes</h1>
+        <div class="header-inner container" role="banner">
+            <a class="logo" href="inicio.html">
+                <img src="logo_106x81.png" alt="Portal logo">
+                <span>Portal</span>
+            </a>
+
+            <nav role="navigation" aria-label="Principal">
+                <a href="inicio.html">Inicio</a>
+
+                <div class="dropdown" id="dropdown-why">
+                    <button class="dropdown-trigger" aria-expanded="false" aria-controls="menu-why">
+                        ¿Por qué Portal? <span class="arrow">▾</span>
+                    </button>
+                    <div id="menu-why" class="dropdown-content" role="menu" aria-hidden="true">
+                        <a role="menuitem" href="porque-elegir-portal.html">¿Por qué elegirnos?</a>
+                        <a role="menuitem" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
+                        <a role="menuitem" href="opiniones-cliente.html">Opiniones de Clientes</a>
+                    </div>
+                </div>
+
+                <a href="servicios.html">Servicios</a>
+                <a href="portfolio.html">Portfolio</a>
+                <a href="clientes.html">Clientes</a>
+                <a href="opiniones-cliente.html">Opiniones</a>
+                <a href="contacto.html" class="btn btn--primary">Contacto</a>
+            </nav>
+        </div>
     </header>
+
     <main>
-        <section>
-            <h2>¿Qué servicios ofrece Portal?</h2>
-            <p>Portal ofrece una variedad de servicios de consultoría, incluyendo diseño de páginas web, hosting, y soporte técnico.</p>
+        <!-- Hero Section -->
+        <section class="hero-main container fade-up">
+            <div class="hero-content">
+                <span class="kicker">Ayuda</span>
+                <h1>Preguntas Frecuentes</h1>
+                <p>Encuentra respuestas a las preguntas más comunes sobre nuestros servicios</p>
+            </div>
         </section>
-        <section>
-            <h2>¿Cómo puedo contactar a Portal?</h2>
-            <p>Puedes contactar a Portal a través de la página de contacto en nuestro sitio web.</p>
+
+        <!-- FAQ Section -->
+        <section class="faq-section container">
+            <div class="faq-grid">
+                <div class="faq-category fade-up">
+                    <h2>Servicios Generales</h2>
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <button class="accordion-trigger" aria-expanded="false">
+                                ¿Qué servicios ofrece Portal?
+                                <span class="accordion-icon">+</span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>Portal ofrece una amplia gama de servicios digitales incluyendo:</p>
+                                <ul>
+                                    <li>Diseño de páginas web profesionales</li>
+                                    <li>Desarrollo de e-commerce</li>
+                                    <li>Marketing digital</li>
+                                    <li>Hosting y dominio</li>
+                                    <li>Soporte técnico especializado</li>
+                                </ul>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <button class="accordion-trigger" aria-expanded="false">
+                                ¿Cuánto tiempo toma desarrollar un proyecto?
+                                <span class="accordion-icon">+</span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>El tiempo de desarrollo varía según la complejidad del proyecto. Típicamente:</p>
+                                <ul>
+                                    <li>Sitios web básicos: 2-3 semanas</li>
+                                    <li>E-commerce: 4-6 semanas</li>
+                                    <li>Proyectos personalizados: 6-8 semanas</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="faq-category fade-up">
+                    <h2>Soporte y Mantenimiento</h2>
+                    <div class="accordion">
+                        <div class="accordion-item">
+                            <button class="accordion-trigger" aria-expanded="false">
+                                ¿Qué tipo de soporte técnico ofrecen?
+                                <span class="accordion-icon">+</span>
+                            </button>
+                            <div class="accordion-content">
+                                <p>Ofrecemos soporte técnico integral que incluye:</p>
+                                <ul>
+                                    <li>Atención 24/7 para emergencias</li>
+                                    <li>Mantenimiento preventivo</li>
+                                    <li>Actualizaciones de seguridad</li>
+                                    <li>Backups automáticos</li>
+                                    <li>Soporte por email, teléfono y chat</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
-        <section>
-            <h2>¿Portal ofrece soporte técnico?</h2>
-            <p>Sí, ofrecemos soporte técnico para ayudar a nuestros clientes con cualquier problema que puedan tener.</p>
-        </section>
-        <section>
-            <h2>¿Qué tipo de empresas trabajan con Portal?</h2>
-            <p>Trabajamos con empresas de todos los tamaños y sectores, adaptando nuestros servicios a sus necesidades específicas.</p>
-        </section>
-        <section>
-            <h2>¿Portal tiene un portafolio de trabajos anteriores?</h2>
-            <p>Sí, puedes ver nuestro portafolio en la sección correspondiente de nuestro sitio web.</p>
+
+        <!-- CTA Section -->
+        <section class="cta-section container">
+            <div class="cta-box fade-up">
+                <h2>¿Tienes más preguntas?</h2>
+                <p>Nuestro equipo está listo para ayudarte con cualquier consulta</p>
+                <a href="contacto.html" class="btn btn--primary">Contactar ahora</a>
+            </div>
         </section>
     </main>
+
     <footer class="footer-dark">
         <div class="container">
             <div class="footer-columns">
@@ -93,5 +182,7 @@
             </div>
         </div>
     </footer>
+
+    <script src="../js/main.js"></script>
 </body>
 </html>
